--- a/courses/chemistry.html
+++ b/courses/chemistry.html
@@ -9,11 +9,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Caleb Paslay" />
 
-<meta name="date" content="2022-11-30" />
 
-<title>Courses Home Page</title>
+<title>chemistry.knit</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -363,25 +361,11 @@ pre code {
 
 
 
-<h1 class="title toc-ignore">Courses Home Page</h1>
-<h4 class="author">Caleb Paslay</h4>
-<h4 class="date">2022-11-30</h4>
 
 </div>
 
 
-<div id="biology" class="section level1">
-<h1><a href="courses/biology/biology.html">Biology</a></h1>
-</div>
-<div id="chemistry" class="section level1">
-<h1><a href="courses/chemistry.html">Chemistry</a></h1>
-</div>
-<div id="earth-science" class="section level1">
-<h1><a href="courses/chemistry.html">Earth Science</a></h1>
-</div>
-<div id="botany" class="section level1">
-<h1><a href="courses/chemistry.html">Botany</a></h1>
-</div>
+
 
 
 
