--- a/index.html
+++ b/index.html
@@ -374,13 +374,13 @@ pre code {
 <h1><a href="courses/biology/biology.html">Biology</a></h1>
 </div>
 <div id="chemistry" class="section level1">
-<h1><a href="courses/chemistry.html">Chemistry</a></h1>
+<h1><a href>Chemistry</a></h1>
 </div>
 <div id="earth-science" class="section level1">
-<h1><a href="courses/chemistry.html">Earth Science</a></h1>
+<h1><a href>Earth Science</a></h1>
 </div>
 <div id="botany" class="section level1">
-<h1><a href="courses/chemistry.html">Botany</a></h1>
+<h1><a href>Botany</a></h1>
 </div>
 
 
